@@ -1,7 +1,22 @@
 /*
  * neuralnet.c
  *
- * by Gary Wong, 1998-2000
+ * by Gary Wong <gtw@gnu.org>, 1998, 1999, 2000, 2001, 2002.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of version 2 of the GNU General Public License as
+ * published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ * $Id$
  */
 
 #include "config.h"
@@ -16,6 +31,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
+#include <time.h>
 
 /* e[k] = exp(k/10) / 10 */
 static float e[100] = {
@@ -169,7 +185,13 @@ static randctx rc; /* for irand */
 static void CheckRC( void ) {
 
     if( !frc ) {
-	irandinit( &rc, FALSE );
+	int i;
+	
+	rc.randrsl[ 0 ] = time( NULL );
+	for( i = 0; i < RANDSIZ; i++ )
+	    rc.randrsl[ i ] = rc.randrsl[ 0 ];
+	irandinit( &rc, TRUE );
+	
 	frc = TRUE;
     }
 }
