@@ -1,3 +1,7 @@
+Wed Feb  6 10:03:53 2002  Gary Wong  <gtw@research.att.com>
+
+	* neuralnet.c (CheckRC): Use time() as a seed for irandinit().
+
 Fri Feb  1 10:49:00 2002  Gary Wong  <gtw@research.att.com>
 
 	* neuralnet.c (NeuralNetCreateDirect): New function.
